--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "mocha": "^2.3.4"
   },
   "jspm": {
+    "name": "nel/misc",
+    "directories": {
+      "lib": "src/nel/misc"
+    },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
